	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+


17-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Refactor a bit check_hidden() not to leak memory
			(Patch by Colomban Wendling)


16-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed gio troubles (BIG THANKS TO Colomban Wendling)

		Fixed unref data in utils_pixbuf_from_path()
		Changed default icon for bookmarks to GTK_STOCK_HOME

		Added new option to show mime-type icons (can be configured by the preferences)
			(Idea from Colomban Wendling`s mail)


09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed possible segfault when deleting file which is in bookmarks tree
		Fixed wrong Show toolbars state when it turned off from the plugin configuration
		Fixed collapsing and preloading bookmarks list when renaming, and deleting objects
	* README
		Try to add screenshot for the website

09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixes possible segfaults with bookmarks in ubuntu 10.10
	* README
		Update and fixes website compitables

09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed translatable info
			(thanks to Frank Lanitz  <frank(at)frank(dot)uvena(dot)de> for patch)
		Fixed fixed bad code and compilation warning in unused vars
			(thanks to Frank Lanitz  <frank(at)frank(dot)uvena(dot)de> for patch)
		Fixed some compilation warnings
		Try to prevent from "ISO C90 forbids mixed declarations and code" compile message


08-10-2010 	Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

	*  src/treebrowser.c
		Replace deprecated PLUGIN_KEY_GROUP macro.

